[package]
name = "eth_checkpoint"
authors = ["Dade <dadepo@gmail.com>"]
description = "Beacon Chain Checkpoints Retriever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0.0"
async-trait = "0.1.59"
axum = "0.6.1"

[dev-dependencies]
http = "0.2.8"

[profile.release]
panic = 'abort'

[lib]
name = "eth_checkpoint_lib"
path = "src/lib.rs"

[[bin]]
name = "eth_checkpoint_bin"
path = "src/main.rs"
