[package]
name = "checkpointq"
authors = ["Dade <dadepo@gmail.com>"]
description = "Tool for establishing checkpoint quorum for finalized checkpoints across multiple checkpoint providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0.0"
async-trait = "0.1.59"
axum = "0.6.1"
axum-macros = "0.3.0"
thiserror = "1.0.38"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing = { version = "0.1.37"}
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
http = "0.2.8"

[profile.release]
panic = 'abort'

[lib]
name = "checkpointq_lib"
path = "src/lib.rs"

[[bin]]
name = "checkpointq"
path = "src/main.rs"
